3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

plugins/cfpython/cfpython.c: added GetPrivateDictionary and GetSharedDictionary
 methods to keep data between runs and share data between scripts.
Ryo 2005-11-05

plugins/Makefile,plugins/cfanim/Makefile: Remove files to be generated by
   configure.
server/main.c: Fix possible out-of-bounds array access.
Andreas Kirschbaum 2005-11-05

Fix case for [sg]etReturnValue. Add compare operator for object and map (of course
 only == is relevant).
Modified files:
 plugins/cfpython/include/cfpython_map_private.h
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython.c
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/cfpython_object.c
Ryo 2005-11-05

aclocal.m4, configure, utils/config.guess, utils/config.sub, utils/ltmain.sh,
*Makefile.in, plugins/cfanim/Makefile, plugins/Makefile: Rebuilt.
lib/Makefile.am: Add template-maps to list of directories to create while
   install.
Andreas Kirschbaum 2005-11-05

lib/wizhelp/reset: document use of '.' as an argument
Brendan Lally 2005-11-05

random_maps/treasure.c: Fix out-of-bounds array access if place_chest() cannot
   find a free spot to place a new chest.
Andreas Kirschbaum 2005-11-01

Fix bug #1082534 (monks with weapons): Now monks properly are denied from
using weapons. Only newly created monks are affected since it now relies on a
force named "no weapon force" in the player's inventory. The problem was that
become_follower() assumed it was the only means do allow/disallow weapon use.
--
server/gods.c: Do not let the god allow using weapons if a "no weapon force"
   object is present in the player's inventory.