@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/shop.c: In value_limit() return the unmodified item price if not in a
+   shop or not for a player.
+Andreas Kirschbaum 2005-11-05
+
 plugins/cfpython/cfpython.c: added GetPrivateDictionary and GetSharedDictionary
  methods to keep data between runs and share data between scripts.
 Ryo 2005-11-05
